--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -18,21 +18,35 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <style>
-        .example_c {
+        .new-user {
             color: #fe9c0e !important;
-            height: 50px;
+            height: 100px;
             text-transform: uppercase;
             text-decoration: none;
-            margin: 7px;
+            font-size: 35px;
             background: none;
-            width: 250px;
+            width: 350px;
+            padding: 20px;
+            border: 4px solid #fe9c0e !important;
+            display: inline-block;
+            transition: all 0.4s ease 0s;
+        }
+
+        .admin {
+            color: #fe9c0e !important;
+            height: px;
+            text-transform: uppercase;
+            text-decoration: none;
+            background: none;
+            width: 100px;
             padding: 10px;
             border: 4px solid #fe9c0e !important;
             display: inline-block;
             transition: all 0.4s ease 0s;
         }
 
-        .example_c:hover {
+        .new-user:hover,
+        .admin:hover {
             color: #ffffff !important;
             background: #fe9c0e;
             border-color: #fe9c0e !important;
@@ -49,8 +63,18 @@
             transform: translate(-50%, -50%);
         }
 
+        .corner {
+            text-align: center;
+            margin: 0;
+            position: absolute;
+            top: 1%;
+            left: 92%;
+            /* -ms-transform: translate(0, -50%);
+            transform: translate(0, -50%); */
+        }
+
         .bg-body {
-            background-image: url(https://image.freepik.com/free-photo/close-up-man-holding-protection-helmet_23-2148321980.jpg);
+            background-image: url(https://hdqwalls.com/wallpapers/orange-minimalism.jpg);
             width: 100%;
             height: 100%;
             background-size: cover;
@@ -63,11 +87,11 @@
 
 <body class="bg-body">
     <div class="center">
-        <h1 style="color:#fe9c0e ;">
-            Welcome to DoRent
-        </h1>
-        <a class="example_c" href="/register">Register</a>
-        <a class="example_c" href="/login">Login</a>
+        <a class="new-user" href="/register/user">New User</a>
+        <br><br>
+    </div>
+    <div class="corner">
+        <a class="admin" href="/register/admin">Admin</a>
     </div>
 </body>
 
