--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -62,6 +62,28 @@
             overflow: hidden;
         }
 
+        .form-style-8 input[type="button"],
+        .form-style-8 input[type="submit"] {
+            -moz-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+            -webkit-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+            box-shadow: inset 0px 1px 0px 0px #45D6D6;
+            background-color: #2CBBBB;
+            border: 1px solid #27A0A0;
+            display: inline-block;
+            cursor: pointer;
+            color: #FFFFFF;
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-size: 14px;
+            padding: 8px 18px;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+
+        .form-style-8 input[type="button"]:hover,
+        .form-style-8 input[type="submit"]:hover {
+            background: linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+            background-color: #34CACA;
+        }
 
         .center {
             text-align: center;
@@ -109,14 +131,10 @@
     <div class="center">
         <form class="form-style-8" action="" method="POST">
             <h2>
-                Registration Form
+                Login
             </h2>
-            <input type="text" name="firstName" placeholder="First Name" />
-            <input type="text" name="lastName" placeholder="Last Name" />
-            <input type="text" name="address" placeholder="Address" />
-            <input type="text" name="phone" placeholder="Phone" />
             <input type="text" name="username" placeholder="Username" />
-            <input type="password" name="password" placeholder="Password" />
+            <input type="password" name="password" placeholder=" Password" />
             <input class="button" type="submit" value="submit" />
         </form>
     </div>
