--- a/views/register/admin.ejs
+++ b/views/register/admin.ejs
@@ -94,10 +94,20 @@
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
         }
+
+        .bg-body {
+            background-image: url(https://hdqwalls.com/wallpapers/orange-minimalism.jpg);
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-repeat: no-repeat;
+            margin: 0;
+            padding: 0;
+        }
     </style>
 </head>
 
-<body>
+<body class="bg-body">
     <div class="center">
         <form class="form-style-8" action="" method="POST">
             <h2>
