adding some view

--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -20,14 +20,14 @@
 
         }
 
-        .form-style-8 h2 {
-            background: #4D4D4D;
+        .form-style-8 h1 {
+            background: #fe9c0e;
             text-transform: uppercase;
             font-family: 'Open Sans Condensed', sans-serif;
-            color: #797979;
-            font-size: 18px;
+            color: #ffffff;
+            font-size: 30px;
             font-weight: 100;
-            padding: 20px;
+            padding: 10px;
             margin: -30px -30px 30px -30px;
         }
 
@@ -107,12 +107,13 @@
 <body class="bg-body">
     <div class="center">
         <form class="form-style-8" action="" method="POST">
-            <h2>
+            <h1>
                 Login
-            </h2>
+            </h1>
             <input type="text" name="username" placeholder="Username" />
-            <input type="password" name="password" placeholder=" Password" />
-            <input class="button" type="submit" value="submit" />
+            <input type="password" name="password" placeholder="Password" />
+            <a href="/"><input class="button" type="button" value="Back" /></a>
+            <input class="button" type="submit" value="Submit" />
         </form>
     </div>
 
