--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -73,6 +73,16 @@
             transform: translate(0, -50%); */
         }
 
+        .left-corner {
+            text-align: center;
+            margin: 0;
+            position: absolute;
+            top: 1%;
+            left: 0.5%;
+            /* -ms-transform: translate(0, -50%);
+            transform: translate(0, -50%); */
+        }
+
         .bg-body {
             background-image: url(https://hdqwalls.com/wallpapers/orange-minimalism.jpg);
             width: 100%;
@@ -92,6 +102,9 @@
     </div>
     <div class="corner">
         <a class="admin" href="/register/admin">Admin</a>
+    </div>
+    <div class="left-corner">
+        <a class="admin" href="/">Back</a>
     </div>
 </body>
 
