--- a/views/register/admin.ejs
+++ b/views/register/admin.ejs
@@ -20,14 +20,14 @@
 
         }
 
-        .form-style-8 h2 {
-            background: #4D4D4D;
+        .form-style-8 h1 {
+            background: #fe9c0e;
             text-transform: uppercase;
             font-family: 'Open Sans Condensed', sans-serif;
-            color: #797979;
-            font-size: 18px;
+            color: #ffffff;
+            font-size: 30px;
             font-weight: 100;
-            padding: 20px;
+            padding: 10px;
             margin: -30px -30px 30px -30px;
         }
 
@@ -81,22 +81,43 @@
             margin: 0;
             padding: 0;
         }
+
+        .button {
+            color: #fe9c0e !important;
+            height: px;
+            text-transform: uppercase;
+            text-decoration: none;
+            background: none;
+            width: 100px;
+            padding: 10px;
+            border: 4px solid #fe9c0e !important;
+            display: inline-block;
+            transition: all 0.4s ease 0s;
+        }
+
+        .button:hover {
+            color: #ffffff !important;
+            background: #fe9c0e;
+            border-color: #fe9c0e !important;
+            transition: all 0.4s ease 0s;
+        }
     </style>
 </head>
 
 <body class="bg-body">
     <div class="center">
         <form class="form-style-8" action="" method="POST">
-            <h2>
+            <h1>
                 Registration Form
-            </h2>
+            </h1>
             <input type="text" name="firstName" placeholder="First Name" />
             <input type="text" name="lastName" placeholder="Last Name" />
             <input type="text" name="address" placeholder="Address" />
             <input type="text" name="phone" placeholder="Phone" />
             <input type="text" name="username" placeholder="Username" />
             <input type="password" name="password" placeholder="Password" />
-            <input type="submit" value="submit" />
+            <a href="/register"><input class="button" type="button" value="Back" /></a>
+            <input class="button" type="submit" value="submit" />
         </form>
     </div>
 
