--- a/views/register/user.ejs
+++ b/views/register/user.ejs
@@ -20,14 +20,14 @@
 
         }
 
-        .form-style-8 h2 {
-            background: #4D4D4D;
+        .form-style-8 h1 {
+            background: #fe9c0e;
             text-transform: uppercase;
             font-family: 'Open Sans Condensed', sans-serif;
-            color: #797979;
-            font-size: 18px;
+            color: #ffffff;
+            font-size: 30px;
             font-weight: 100;
-            padding: 20px;
+            padding: 10px;
             margin: -30px -30px 30px -30px;
         }
 
@@ -108,15 +108,16 @@
 <body class="bg-body">
     <div class="center">
         <form class="form-style-8" action="" method="POST">
-            <h2>
+            <h1>
                 Registration Form
-            </h2>
+            </h1>
             <input type="text" name="firstName" placeholder="First Name" />
             <input type="text" name="lastName" placeholder="Last Name" />
             <input type="text" name="address" placeholder="Address" />
             <input type="text" name="phone" placeholder="Phone" />
             <input type="text" name="username" placeholder="Username" />
             <input type="password" name="password" placeholder="Password" />
+            <a href="/register"><input class="button" type="button" value="Back" /></a>
             <input class="button" type="submit" value="submit" />
         </form>
     </div>
