--- a/views/profile/adminMoto.ejs
+++ b/views/profile/adminMoto.ejs
@@ -8,6 +8,19 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        $(function () {
+            $("#datepickerStart").datepicker();
+        });
+        $(function () {
+            $("#datepickerFinish").datepicker();
+        });
+    </script>
+    <!-- ========================================================== -->
     <style>
         * {
             font-family: 'Open Sans', sans-serif;
@@ -348,6 +361,16 @@
         }
 
         /* ================================= */
+
+        .input-date {
+
+            width: 49%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 
@@ -355,7 +378,7 @@
 
     <div class="form-style-8">
         <div class="upper">
-            <%= data.firstName%> <%= data.lastName%>
+            NAMA ADMIN
             <a href="/logout"><input type="button" class="logout" style="float: right;padding: 8px;"
                     value="Log Out"></a>
         </div>
@@ -367,46 +390,37 @@
             <div style="height: 190px;width: 630px;float: left;margin-left: 20px;margin-right: 20px;">
 
                 Address:<br>
-                <%= data.address%>
                 <br><br>
                 Phone:<br>
-                <%= data.phone%>
                 <br><br>
                 Register From:<br>
-                <%= data.createdAt.toString()%>
+
             </div>
             <div style="float: left">
-                <div>
-                    <div style="font-size: 35px">
-                        Balance
-                    </div>
-                    <div style="font-size: 33px;text-align: center;">
-                        Rp. <%= data.balance%>
-                    </div>
-                </div>
-                <br>
                 <button onclick="document.getElementById('id01').style.display='block'" class="button2"
-                    style="margin-bottom: 5px;">Top Up</button>
+                    style="margin-bottom: 5px;">Show Customers</button>
                 <br>
                 <button onclick="document.getElementById('id02').style.display='block'" class="button2"
-                    style="margin-bottom: 5px;">Rent</button>
+                    style="margin-bottom: 5px;">Show Motors</button>
                 <!-- <input type="button" class="button2" value="Rent"> -->
 
             </div>
         </div>
         <br>
         <div style="font-size: 25px;">
-            RENTAL HISTORY
+            LIST MOTORS
         </div>
         <div>
             <div class="tbl-header">
                 <table cellpadding="0" cellspacing="0" border="0">
                     <thead>
                         <tr>
-                            <th>Invoice</th>
-                            <th>Start Date</th>
-                            <th>Finish Date</th>
+                            <th>Plat Number</th>
+                            <th>Category</th>
+                            <th>Type</th>
                             <th>Price</th>
+                            <th>Status</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
                 </table>
@@ -446,9 +460,8 @@
                     Rent Bike
                 </h1>
                 <input type="text" name="typeMoto" placeholder="Type Motor">
-                <input type="text" style="width: 49.8%;" class="inputDate" id="datepickerStart"
-                    placeholder="Start Date">
-                <input type="text" style="width: 49.8%;" id="datepickerFinish" placeholder="Finish Date">
+                <input type="text" style="width: 49.8%;" class="inputDate" id="datepickerStart" placeholder="Start">
+                <input type="text" style="width: 49.8%;" id="datepickerFinish" placeholder="Finish">
                 <div>
                     <button class="button" type="submit">Rent</button>
                     <button type="button" onclick="document.getElementById('id02').style.display='none'"
