--- a/views/profile/admin.ejs
+++ b/views/profile/admin.ejs
@@ -397,11 +397,11 @@
 
             </div>
             <div style="float: left">
-                <button onclick="document.getElementById('id01').style.display='block'" class="button2"
-                    style="margin-bottom: 5px;">Show Customers</button>
+                <button class="button2" style="margin-bottom: 5px;">Show Customers</button>
                 <br>
-                <button onclick="document.getElementById('id02').style.display='block'" class="button2"
-                    style="margin-bottom: 5px;">Show Motors</button>
+                <button class="button2" style="margin-bottom: 5px;">Show Motors</button><br>
+                <button onclick="document.getElementById('id01').style.display='block'" class="button2"
+                    style="margin-bottom: 5px;">Add Motor</button><br>
                 <!-- <input type="button" class="button2" value="Rent"> -->
 
             </div>
@@ -435,15 +435,17 @@
     </div>
     <!-- ======================================= -->
     <div id="id01" class="modal">
-
         <form class="modal-content animate" action="" method="POST">
             <div class="container">
                 <h1 style="color: #fe9c0e;">
-                    Top Up Balance
+                    Add New Motor
                 </h1>
-                <input type="number" name="topup" placeholder="Nominal" />
+                <input type="text" name="type" placeholder="Type" />
+                <input type="text" name="category" placeholder="Category" />
+                <input type="number" name="price" placeholder="Price" />
+                <input type="number" name="quota" placeholder="Quota" />
                 <div>
-                    <button class="button" type="submit">Top Up</button>
+                    <button class="button" type="submit">Add</button>
                     <!-- <button class="button" type="button">Cancel</button> -->
                     <button type="button" onclick="document.getElementById('id01').style.display='none'"
                         class="button">Cancel</button>
@@ -452,24 +454,6 @@
         </form>
     </div>
 
-    <div id="id02" class="modal">
-
-        <form class="modal-content animate" action="" method="POST">
-            <div class="container">
-                <h1 style="color: #fe9c0e;">
-                    Rent Bike
-                </h1>
-                <input type="text" name="typeMoto" placeholder="Type Motor">
-                <input type="text" style="width: 49.8%;" class="inputDate" id="datepickerStart" placeholder="Start">
-                <input type="text" style="width: 49.8%;" id="datepickerFinish" placeholder="Finish">
-                <div>
-                    <button class="button" type="submit">Rent</button>
-                    <button type="button" onclick="document.getElementById('id02').style.display='none'"
-                        class="button">Cancel</button>
-                </div>
-            </div>
-        </form>
-    </div>
 
     <script>
         // Get the modal
