--- a/views/profile/user.ejs
+++ b/views/profile/user.ejs
@@ -14,10 +14,10 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
         $(function () {
-            $("#datepickerStart").datepicker();
+            $("#datepickerStart").datepicker({ dateFormat: 'yy-mm-dd' })
         });
         $(function () {
-            $("#datepickerFinish").datepicker();
+            $("#datepickerFinish").datepicker({ dateFormat: 'yy-mm-dd' })
         });
     </script>
     <style>
@@ -239,7 +239,8 @@
         /* Full-width input fields */
         input[type=text],
         input[type=number],
-        input[type=password] {
+        input[type=password],
+        select {
             width: 100%;
             padding: 12px 20px;
             margin: 8px 0;
