--- a/views/profile/admin.ejs
+++ b/views/profile/admin.ejs
@@ -378,8 +378,7 @@
 
     <div class="form-style-8">
         <div class="upper">
-            <%= data.firstName%> <%= data.lastName%>
-
+                <%= data.firstName%> <%= data.lastName%>
             <a href="/logout"><input type="button" class="logout" style="float: right;padding: 8px;"
                     value="Log Out"></a>
         </div>
@@ -398,7 +397,6 @@
                 <br><br>
                 Register From:<br>
                 <%= data.createdAt.toString()%>
-
             </div>
             <div style="float: left">
                 <button class="button2" style="margin-bottom: 5px;">Show Customers</button>
@@ -419,10 +417,10 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <thead>
                         <tr>
-                            <th>Plat Number</th>
-                            <th>Category</th>
                             <th>Type</th>
+                            <th>Category</th>
                             <th>Price</th>
+                            <th>Quota</th>
                             <th>Status</th>
                             <th>Action</th>
                         </tr>
@@ -432,6 +430,20 @@
             <div class="tbl-content" style="background-color: rgba(254, 156, 14, 0.2);">
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tbody>
+                        <% for(let i = 0; i < moto.length; i++) { %>
+                            <tr>
+                                <th> <%=moto[i].type%> </th>
+                                <th> <%=moto[i].category%> </th>
+                                <th> <%=moto[i].price%> </th>
+                                <th> <%=moto[i].quota%> </th>
+                                <th> <%=moto[i].status%> </th>
+                                <th>
+                                        <a href=""> Update </a> 
+                                        <a href=""> Delete </a> 
+        
+                                    </th>
+                            </tr>
+                        <% } %>
                     </tbody>
                 </table>
             </div>
