--- a/views/profile/user.ejs
+++ b/views/profile/user.ejs
@@ -416,7 +416,7 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <thead>
                         <tr>
-                            <th>Invoice</th>
+                            <th>Moto Type</th>
                             <th>Start Date</th>
                             <th>Finish Date</th>
                             <th>Price</th>
@@ -427,6 +427,14 @@
             <div class="tbl-content" style="background-color: rgba(254, 156, 14, 0.2);">
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tbody>
+                        <% for(let i = 0; i < Motos.length; i++) { %>
+                            <tr>
+                                <td><%=Motos[i].type%></td>
+                                <td><%=Motos[i].MotoRent.start%></td>
+                                <td><%=Motos[i].MotoRent.finish%></td>
+                                <td><%=Motos[i].price%></td>
+                            </tr>
+                        <% } %>
                     </tbody>
                 </table>
             </div>
